# repro

./: .gitignore  .pre-commit-config.yaml  README
.github/workflows/: build.yaml  caller.yaml  reusable.yaml
check-jsonschema/parallel-invoke/: run.sh  wf2.yaml
click/annotations-814/: click_example.py  requirements.txt
flask/ua_typesig/: minimal.py  run.sh  ua_parser.py
mypy-issues/: platform_check.py  run.sh  setup.cfg
mypy-issues/gh-issues/12823/: rep.py
mypy-issues/loopscope/: loops.py  runme.sh
mypy-issues/paramspec/: no_op.py  run.sh
mypy-issues/platform_check/: ok.py  run.sh
peps/lazy-imports/foolib/: __init__.py  foo.py
peps/lazy-imports/foolib/bar/: __init__.py  withfoo.py
poetry-and-virtualenv/: Dockerfile  README.md  pyproject.toml
sphinxdoc/literal/: doc.sh  reproproj.py
sphinxdoc/literal/docs/: conf.py  index.rst
